@@ -1,6 +1,8 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
    * --replicate-check=0 did not skip the checksumming step (issue 1020).
+   * Added --[no]check-replication-filters (issue 993).
+   * Added --replication-filter-checks (issue 993).
 
 2010-05-03: version 1.2.14
 
